# ChAI

./: CMakeLists.txt
lib/: Bridge.chpl  DynamicTensor.chpl  Layer.chpl  NDArray.chpl  StaticTensor.chpl
test/correspondence/activation/leakyrelu/: leakyrelu.chpl  leakyrelu.py
test/tiny/: CMakeLists.txt  brandyn_celu.chpl  brandyn_elu.chpl  brandyn_gelu.chpl  brandyn_hardshrink.chpl  brandyn_hardsigmoid.chpl  brandyn_hardswish.chpl  brandyn_hardtanh.chpl  brandyn_leakyrelu.chpl  brandyn_logsigmoid.chpl  brandyn_mish.chpl  brandyn_relu.chpl  brandyn_relu6.chpl  brandyn_rrelu.chpl  brandyn_selu.chpl  brandyn_sigmoid.chpl  brandyn_silu.chpl  brandyn_softplus.chpl  brandyn_softshrink.chpl  brandyn_softsign.chpl  brandyn_tanh.chpl  brandyn_tanhshrink.chpl  brandyn_threshold.chpl
